kubernetes/apps/backend-stack/directus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directus
  namespace: backend-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: directus
  template:
    metadata:
      labels:
        app: directus
    spec:
      containers:
      - name: directus
        image: directus/directus:10.13 # On fixe une version stable 2024/2025
        ports:
        - containerPort: 8055
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: directus
  namespace: backend-stack
spec:
  ports:
  - port: 80
    targetPort: 8055
  selector:
    app: directus
